src/objects/et4ae5__IndividualLink__c.object
<CustomObject>
    <fields>
        <fullName>et4ae5__ExactTargetLinkID__c</fullName>
        <label>Marketing Cloud Link ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Individual_Email_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual Email Result</label>
        <referenceTo>et4ae5__IndividualEmailResult__c</referenceTo>
        <relationshipLabel>Individual Link Level Details</relationshipLabel>
        <relationshipName>Individual_Link_Level_Detail_Individual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__Last_Clicked__c</fullName>
        <inlineHelpText>La fecha y la hora en que este suscriptor hizo clic por última vez en este vínculo</inlineHelpText>
        <label>Last Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__LinkURL__c</fullName>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberOfTotalClicks__c</fullName>
        <inlineHelpText>El número de veces que este suscriptor hizo clic en este vínculo</inlineHelpText>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Unique_Link_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Link ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Individual Link Level Detail</label>
    <nameField>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Link Level Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>